--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,22 +38,22 @@ jobs:
   # ----
   # Deploy step : Comment back in when ready to deploy
   # ----
-  deploy:
-    # Limit to only the main branch
-    if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
-    # Add a dependency to the build job
-    needs: build
-    # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-    permissions:
-      pages: write
-      id-token: write
-    # Deploy to the github-pages environment
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    # Run the deploy steps
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy 🚀
-        id: deployment
-        uses: actions/deploy-pages@v2
+  # deploy:
+  #   # Limit to only the main branch
+  #   if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
+  #   # Add a dependency to the build job
+  #   needs: build
+  #   # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+  #   permissions:
+  #     pages: write
+  #     id-token: write
+  #   # Deploy to the github-pages environment
+  #   environment:
+  #     name: github-pages
+  #     url: ${{ steps.deployment.outputs.page_url }}
+  #   # Run the deploy steps
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Deploy 🚀
+  #       id: deployment
+  #       uses: actions/deploy-pages@v2
